--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,7 @@ body {
     padding: 0;
     height: 100vh;
     width: 100vw;
-
-    background-color: rgb(243, 243, 229);
+    background-color: rgb(226, 226, 232);
 
     display: flex;
     flex-direction: column;
@@ -16,30 +15,117 @@ body {
 
 #outermost {
     box-sizing: border-box;
-    height: 80%;
-    min-width: 570px;
-    border: 1px solid black;
+    height: 70%;
+    min-width: 500px;
+    border: 1.3px solid rgb(0, 0, 0);
     border-radius: 20px;
+    background-color: rgb(103, 104, 108);
 
-    background-color: rgb(249, 249, 235);
     display: flex;
     flex-direction: column;
 }
 
-#topDisplay {
-    width: 540px;
+#Display {
+    min-width: 460px;
     min-height: 100px;
-    background-color: green;
+    border: 1.3px solid black;
     border-radius: 2px;
-    margin: 20px 0 30px 0;
+    background-color: rgb(215, 215, 223);
+    margin: 30px 0 50px 0;
+
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
     align-self: center;
+
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    font-size: 22px;
+    color: rgb(66, 64, 64);
 }
 
 #mainContainer {
-    width: 540px;
-    background-color: blueviolet;
-    height: 100%;
-    margin: 0 0 20px 0;
+    width: 460px;
+    height: 70%;
+    border: 1.2px solid black;
     border-radius: 20px;
+    background-color: rgb(170, 170, 173);
+
+    display: flex;
+    justify-content: space-evenly;
     align-self: center;
+}
+
+#column1, #column2, #column3, #column4  {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 20px 0 20px 0;
+}
+
+/*column 1 buttons*/
+#column1 button {
+    height: 70px;
+    width: 70px;
+    border: 1.2px solid black;
+    border-radius: 8px;
+    background-color: rgb(226, 226, 232);
+
+
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    font-size: 22px;
+    color: rgb(66, 64, 64);
+}
+
+/*column 2 buttons*/
+#column2 button {
+    height: 70px;
+    width: 70px;
+    border-radius: 8px;
+    border: 1.2px solid black;
+    border-radius: 8px;
+    background-color: rgb(226, 226, 232);
+
+
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    font-size: 22px;
+    color: rgb(66, 64, 64);
+}
+
+/*column 3 buttons*/
+#column3 button {
+    height: 70px;
+    width: 70px;
+    border-radius: 8px;
+    border: 1.2px solid black;
+    border-radius: 8px;
+    background-color: rgb(226, 226, 232);
+
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    font-size: 22px;
+    color: rgb(66, 64, 64);
+}
+
+/*column 4 buttons*/
+#column4 button {
+    height: 70px;
+    width: 70px;
+    border-radius: 8px;
+    border: 1.2px solid black;
+    border-radius: 8px;
+    background-color: rgb(226, 226, 232);
+
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    font-size: 30px;
+    color: rgb(66, 64, 64);
+}
+
+#column3 #bPercent, #column3 #bDecimal {
+    font-size: 30px;
 }
